syntax ="proto3";

package go.micro.srv.user;

option go_package="/user";

service UserService {
rpc CreateUser(User) returns (Response) {}
rpc SignIn(SignInInfo) returns (Token) {}
rpc GetAll(Empty) returns (Users) {}
rpc DeleteUser(Id) returns (Response) {}
rpc SetBalance(SetBalanceInfo) returns (Response) {}
}

message  User {
int32 id=1;
string name=2;
string password=3;
int32 balance=4;
}
message SignInInfo {
string name=1;
string password=2;
}
message Token {
string token=1;
}
message Empty {

}
message Users {
repeated User user=1;
}
message Response {
string response=1;
}
message Id {
int32 id=1;
}
message SetBalanceInfo {
int32 id=1;
int32 money=3;
}